# reconstruction-deep-network

./: .gitignore  README.md  pyproject.toml
reconstruction_deep_network/: download-matterport.py  download_matterport.py  generate-img-encodings.py  generate-text-encodings.py  hello_world.ipynb  hello_world.py  ir_nyuv2_dataset.ipynb  open3d_tutorial.py  text-embedding-gen.py  train-main.py
reconstruction_deep_network/.ipynb_checkpoints/: hello_world-checkpoint.py
reconstruction_deep_network/YOLO/: metadata_final2.csv  metadata_format.ipynb
reconstruction_deep_network/YOLO/Boundary generation/: testing1.py
reconstruction_deep_network/YOLO/Label Creation/: withlabel.py
reconstruction_deep_network/data_loader/: custom_loader.py  data_loader_config.yaml  ir-20231129-val-split.npy  itest.py  matterport.py
reconstruction_deep_network/load_process/: load.py  processing.py
reconstruction_deep_network/metadata/: feature_metadata.csv  no_objects.csv
reconstruction_deep_network/metrics/: metrics.py
reconstruction_deep_network/models/: attention.py  base_model.py  inception.py  model_config.yaml  pretrained.py  res_net.py  transformer.py  utils.py
reconstruction_deep_network/preprocessing/: depth_to_pcd_process.py  feature_points.py  load_dataset.py  metadata_process.py  optical_flow.py
reconstruction_deep_network/testing/: 17DRP5sb8fy.conf  ishaan_code_for_ref.py  visualization.py  wcolor.py  wocolor.py
reconstruction_deep_network/trainer/: trainer.py  trainer_config.yaml
reconstruction_deep_network/utils/: visualization.py  voxel.py
(+20 files in other folders)
