[tool.poetry]
name = "reconstruction-deep-network"
version = "0.1.0"
description = "This package contains the scripts to develop, train and evaluate the deep network for 3D reconstruction"
authors = ["Ishaan Roy, Gursimar Singh, Abhishek Sharma"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.0"
pandas = "^2.1.1"
scipy = "^1.11.3"
tensorflow = "^2.14.0"
plotly = "^5.17.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
