[tool.poetry]
name = "reconstruction-deep-network"
version = "0.1.0"
description = "This package contains the scripts to develop, train and evaluate the deep network for 3D reconstruction"
authors = ["Ishaan Roy, Gursimar Singh, Abhishek Sharma"]
license = "MIT"
readme = "README.md"
packages = [{include = "reconstruction_deep_network"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
scipy = "^1.11.3"
tensorflow = "^2.14.0"
plotly = "^5.17.0"
matplotlib = "^3.8.0"
cython = "^3.0.3"
open3d = "^0.17.0"
scikit-learn = "^1.3.1"
addict = "^2.4.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
nbformat = "5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
